[gd_scene load_steps=5 format=2]

[ext_resource path="res://Level_Editor.gd" type="Script" id=1]
[ext_resource path="res://Level.gd" type="Script" id=2]
[ext_resource path="res://Tileset.tres" type="TileSet" id=3]
[ext_resource path="res://EditorTileMap.gd" type="Script" id=4]

[node name="Root" type="Node"]
script = ExtResource( 1 )

[node name="Level" type="Node2D" parent="."]
visible = false
script = ExtResource( 2 )

[node name="EditorTileMap" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 3 )
cell_size = Vector2( 82, 96 )
cell_quadrant_size = 2
cell_half_offset = 1
format = 1
script = ExtResource( 4 )

[node name="EditorPanel" type="Panel" parent="."]
margin_right = 240.0
margin_bottom = 720.0

[node name="ActiveState" type="Node" parent="EditorPanel"]

[node name="Label" type="Label" parent="EditorPanel/ActiveState"]
visible = false
margin_left = 60.0
margin_top = 60.0
margin_right = 180.0
margin_bottom = 74.0
text = "Select Action:"

[node name="TileList" type="ItemList" parent="EditorPanel/ActiveState"]
visible = false
margin_left = 60.0
margin_top = 80.0
margin_right = 180.0
margin_bottom = 140.0

[node name="InitialState" type="Node" parent="EditorPanel"]

[node name="ImportJSON" type="Button" parent="EditorPanel/InitialState"]
margin_left = 60.0
margin_top = 40.0
margin_right = 180.0
margin_bottom = 80.0
text = "Import JSON"

[node name="StartNew" type="Button" parent="EditorPanel/InitialState"]
margin_left = 60.0
margin_top = 100.0
margin_right = 180.0
margin_bottom = 140.0
text = "Start New Level"

[node name="JSONPicker" type="FileDialog" parent="EditorPanel/InitialState"]
margin_right = 275.0
margin_bottom = 130.0
window_title = "Open a File"
mode = 0
access = 2
current_dir = "C:/Users/Tyler/godot/Bootstrap"
current_path = "C:/Users/Tyler/godot/Bootstrap/"

[node name="AcceptDialog" type="AcceptDialog" parent="EditorPanel/InitialState"]
margin_right = 128.0
margin_bottom = 58.0
window_title = "Parsing Error"

[connection signal="item_selected" from="EditorPanel/ActiveState/TileList" to="EditorTileMap" method="_on_TileList_item_selected"]
[connection signal="pressed" from="EditorPanel/InitialState/ImportJSON" to="." method="_on_ImportJSON_pressed"]
[connection signal="pressed" from="EditorPanel/InitialState/StartNew" to="." method="_on_StartNew_pressed"]
[connection signal="file_selected" from="EditorPanel/InitialState/JSONPicker" to="." method="_on_JSONPicker_file_selected"]
